fix the issue with Payment table and header in dark mode

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -34,6 +34,11 @@
     --logo: url('./cfs-light.png');
   }
   
+  .londrina-outline-regular {
+    font-family: "Londrina Outline", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
 
 
 .btn {
@@ -192,11 +197,11 @@
     }
   }
 
-  @media (prefers-color-scheme: dark){
+  /* @media (prefers-color-scheme: dark){
     .customStroke{
       -webkit-text-stroke: 1px #f5f5f5;
     }
   }
   .logo{
     background: url('./cfs-dark.png');
-  }
+  } */
